force-app/main/default/objects/OrderItem/fields/Remove_Installation_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Remove_Installation_Work_Type__c</fullName>
    <formula>PricebookEntry.Product2.Remove_Installation_Work_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remove/Installation Work Type</label>
    <type>Text</type>
</CustomField>