force-app/main/default/objects/OrderItem/fields/Replaced_Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Replaced_Order_Item_Id__c</fullName>
    <label>Replaced Order Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>