force-app/main/default/objects/OrderItem/fields/Requested_Price_Approved__c.field-meta.xml
<CustomField>
    <fullName>Requested_Price_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested Price Approved</label>
    <type>Checkbox</type>
</CustomField>