force-app/main/default/objects/OrderItem/fields/SendToSage__c.field-meta.xml
<CustomField>
    <fullName>SendToSage__c</fullName>
    <formula>Order.SendToSage__c &amp;&amp;

(
LastModifiedDate &gt;= Upsert_Date__c || 
Order.ActivatedDate &gt;= Upsert_Date__c || 
ISBLANK(Upsert_Date__c) || Inventory_Consumed__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SendToSage</label>
    <type>Checkbox</type>
</CustomField>