force-app/main/default/objects/OrderItem/fields/Separate_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Separate_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicate whether the delivery needs to be a separate work order</inlineHelpText>
    <label>Separate Delivery</label>
    <type>Checkbox</type>
</CustomField>