force-app/main/default/objects/OrderItem/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Service Plan record that services this Order Product.</description>
    <inlineHelpText>Lookup to Service Plan record that services this Order Product.</inlineHelpText>
    <label>Service Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Plan__c.Frequency__c</field>
            <operation>equals</operation>
            <valueField>$Source.Frequency__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Service_Plan__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>