force-app/main/default/objects/OrderItem/fields/Service_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan_Name__c</fullName>
    <description>Name of associated service plan</description>
    <formula>Service_Plan__r.Name</formula>
    <inlineHelpText>Name of associated service plan</inlineHelpText>
    <label>Service Plan Name</label>
    <type>Text</type>
</CustomField>