force-app/main/default/objects/OrderItem/fields/Service_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Service_Price_Per_Unit__c</fullName>
    <inlineHelpText>Indicate a recurring Service. Price is entered for per visit for per unit of this item. This should be filled in to indicate a recurring Service.</inlineHelpText>
    <label>Service Price Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>