force-app/main/default/objects/OrderItem/fields/Service_Type_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Service_Type_Mapping__c</fullName>
    <description>Mapping of associated Product Code to defined Service Type.  Value is to be retrieved and updated to the Order.Service_Type__c field then to Account.Service_Type__c multi-select picklist fields via Apex scheduled jobs.</description>
    <formula>IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-03&quot;), &quot;Soap&quot;, 
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-04&quot;), &quot;AromaAire&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-05&quot;), &quot;Vending&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-08&quot;), &quot;Automation&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-11-03&quot;), &quot;Sani - Fixture Cleaning&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-11-13&quot;), &quot;Toilet Seat Sanitizer&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-11-14&quot;), &quot;Kaivac - STI&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-11-20&quot;), &quot;Anti Splash&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-14&quot;), &quot;First Aid/AED&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-16&quot;), &quot;Service Charges&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-20-23&quot;), &quot;Diaper&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-20-22&quot;), &quot;Diaper&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-20&quot;), &quot;Disposal Onsite&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-21&quot;), &quot;Disposal Exchange&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-30&quot;), &quot;EcoFresh&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-31&quot;), &quot;EcoClean&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-32&quot;), &quot;FreshAire&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-39&quot;), &quot;EcoClean&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-40&quot;), &quot;Mat Rentals&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-41&quot;), &quot;Apron/Bar Rentals&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-42&quot;), &quot;SaniClean&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-43&quot;), &quot;Rental Mop&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-44&quot;), &quot;Sani Restore&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-50&quot;), &quot;Pest&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-53&quot;), &quot;Fly Light&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-54&quot;), &quot;Bird Work&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-55&quot;), &quot;Pest Special&quot;,
IF(BEGINS (PricebookEntry.Product2.ProductCode, &quot;1-60&quot;), &quot;Chemical Dispenser&quot;,
NULL))))))))))))))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Type Mapping</label>
    <type>Text</type>
</CustomField>