force-app/main/default/objects/OrderItem/fields/Service_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Work_Type__c</fullName>
    <formula>PricebookEntry.Product2.Service_Work_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Work Type</label>
    <type>Text</type>
</CustomField>