force-app/main/default/objects/OrderItem/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <formula>IF( 
   AND(ISPICKVAL(Product_Type__c,&apos;Equipment&apos;),
       ISPICKVAL(Installation_Status__c,&apos;Install&apos;)),1,

   IF(
       AND(ISPICKVAL(Product_Type__c,&apos;Consumables&apos;),
           ISPICKVAL(Installation_Status__c,&apos;Install&apos;)),2,
   IF(
       AND(ISPICKVAL(Product_Type__c,&apos;Equipment&apos;),
           ISPICKVAL(Installation_Status__c,&apos;&apos;)),3,
   IF(
       AND(ISPICKVAL(Product_Type__c,&apos;Consumables&apos;),
           ISPICKVAL(Installation_Status__c,&apos;&apos;)),3,

   IF(
       AND(ISPICKVAL(Product_Type__c,&apos;Service&apos;),
           ISPICKVAL(Installation_Status__c,&apos;Install&apos;)),4,
  
   IF(
       AND(ISPICKVAL(Product_Type__c,&apos;Service&apos;),
           ISPICKVAL(Installation_Status__c,&apos;&apos;)),5,
   
   99)))))
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>