force-app/main/default/objects/OrderItem/fields/Survey_Location__c.field-meta.xml
<CustomField>
    <fullName>Survey_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Location</label>
    <referenceTo>Survey_Location__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>