force-app/main/default/objects/OrderItem/fields/Survey_Locations__c.field-meta.xml
<CustomField>
    <fullName>Survey_Locations__c</fullName>
    <description>Add the name of the location and the building name to this field ..</description>
    <formula>IF(NOT( ISBLANK( Survey_Location__c ) ), 
Survey_Location__r.Name  +  &apos; : &apos; + Survey_Location__r.Building__c + &apos;:&apos; +  Survey_Location__r.Floor__c  + &apos;:&apos; + TEXT(Survey_Location__r.Location_Type__c) + IF(NOT( ISBLANK( TEXT(Survey_Location__r.Location_SubType__c))), &apos;:&apos; +  TEXT(Survey_Location__r.Location_SubType__c), &apos;&apos;) , 
&apos;&apos;)</formula>
    <label>Survey Locations</label>
    <type>Text</type>
</CustomField>