force-app/main/default/objects/OrderItem/fields/TempNextDate__c.field-meta.xml
<CustomField>
    <fullName>TempNextDate__c</fullName>
    <formula>Last_Automation_Created_Date__c  +  FrequencyInDays__c</formula>
    <label>TempNextDate</label>
    <type>Date</type>
</CustomField>