force-app/main/default/objects/OrderItem/fields/Total_Installation_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Installation_Price__c</fullName>
    <formula>Quantity * Installation_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Installation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>