force-app/main/default/objects/OrderItem/fields/Total_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Revenue__c</fullName>
    <formula>Quantity * Monthly_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>