force-app/main/default/objects/OrderItem/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>UniqueKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>