force-app/main/default/objects/OrderItem/fields/Valid_for_Install_Remove_Replace__c.field-meta.xml
<CustomField>
    <fullName>Valid_for_Install_Remove_Replace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid for Install/Remove/Replace</label>
    <type>Checkbox</type>
</CustomField>