force-app/main/default/objects/OrderItem/validationRules/Cannot_Have_Service_Price_on_Consumables.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Have_Service_Price_on_Consumables</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Item_Type__c =  $Setup.Field_Service_Settings__c.Item_Type_for_Consumables__c , NOT( ISBLANK( Service_Price_Per_Unit__c ) ),  CASESAFEID( $User.ProfileId ) &lt;&gt;  $Setup.Field_Service_Settings__c.System_Administrator_Profile_Id__c ,  NOT( ISBLANK(Item_Type__c ) )   )</errorConditionFormula>
    <errorDisplayField>Accpac_DetailNumber__c</errorDisplayField>
    <errorMessage>You cannot have Service Price on Consumables</errorMessage>
</ValidationRule>