force-app/main/default/objects/OrderItem/validationRules/Cant_Have_Service_And_Purchase_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Have_Service_And_Purchase_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISCHANGED( Service_Price_Per_Unit__c ),ISCHANGED( Purchase_Price__c ),ISNEW()),
NOT ( CASESAFEID( $User.ProfileId ) = $Setup.Field_Service_Settings__c.System_Administrator_Profile_Id__c ),
AND (
NOT(CONTAINS(Product_Name__c, &apos;PPSA&apos;)), NOT(CONTAINS(Product_Name__c, &apos;Delivery&apos;)), NOT( ISBLANK(Service_Price_Per_Unit__c ) ), NOT( ISBLANK(Purchase_Price__c ) ) ))</errorConditionFormula>
    <errorMessage>You can only have either Service or Purchase Price</errorMessage>
</ValidationRule>