force-app/main/default/objects/OrderItem/validationRules/Do_not_allow_frequency_selection_for_BC.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_allow_frequency_selection_for_BC</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL(Frequency__c, &apos;Twice Monthly&apos;),
   ISPICKVAL(Frequency__c, &apos;Monthly&apos;),
   ISPICKVAL(Frequency__c, &apos;Bi-Monthly&apos;)
),
OR(UPPER(Order.Account.ShippingState) = &apos;BC&apos;,
   UPPER(Order.Account.ShippingState) = &apos;AB&apos;),
Line_of_Business__c=&apos;Hygiene&apos;
)</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>The product frequency is not sold in this customer region (confirm with business)</errorMessage>
</ValidationRule>