force-app/main/default/objects/OrderItem/validationRules/Emergency_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Emergency_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Order.Emergency__c, TEXT(Frequency__c) !=&apos;One-Time&apos;,  Active__c == TRUE)</errorConditionFormula>
    <errorMessage>Emergency Orders can only have a frequency of One-Time</errorMessage>
</ValidationRule>