force-app/main/default/objects/OrderItem/validationRules/Quantity_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Limit</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISBLANK(Quantity)) &amp;&amp; Quantity &lt;&gt; 1</errorConditionFormula>
    <errorDisplayField>Quantity</errorDisplayField>
    <errorMessage>Quantity can only be set to 1</errorMessage>
</ValidationRule>