force-app/main/default/objects/OrderItem/validationRules/Require_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Price</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Service_Price_Per_Unit__c) &amp;&amp; 
ISBLANK(Installation_Price__c) &amp;&amp; 
ISBLANK(Purchase_Price__c)</errorConditionFormula>
    <errorDisplayField>Service_Price_Per_Unit__c</errorDisplayField>
    <errorMessage>Service, Installation and/or Purchase Prices are required.</errorMessage>
</ValidationRule>