force-app/main/default/objects/OrderItem/validationRules/Service_Frequency_56_days.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Frequency_56_days</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Frequency__c,&apos;56 Days&apos;),
    OR(UPPER(Order.Account.ShippingState) != &apos;ON&apos;,
       AND(LEN(Order.Account.ShippingState) &gt; 2,
           UPPER(Order.Account.ShippingState) != &apos;ONTARIO&apos;)), 
    OR(AND(Order.Account.Service_Territory__r.Include_In_Integration__c = True,ISNULL(Order.Service_Territory__c)), 
       AND(NOT(ISNULL(Order.Service_Territory__c)),Order.Service_Territory__r.Include_In_Integration__c = True))
   )</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>The product frequency is not sold in this customer region (confirm with business)</errorMessage>
</ValidationRule>